--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "^13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.5.2",
     "superjson": "1.12.2",
     "zod": "^3.21.4"
   },
